--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-table": "^8.21.2",
     "@types/papaparse": "^5.3.15",
     "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "csv-parse": "^5.6.0",
     "jotai": "^2.12.0",
     "jszip": "^3.10.1",
@@ -29,6 +30,7 @@
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
